[package]
name = "network-audio-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nab"
path = "src/main.rs"

[features]
asio = ["cpal/asio"]

[dependencies]
cpal = { version = "0.15", features = [] }
ringbuf = "0.3"
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rubato = "0.16"


[[bin]]
name = "nab-recv"
path = "src/bin/receiver.rs"

[profile.release]
opt-level = 3
